[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Toshihisa Okaneya <t.okaneya@bloomingk2.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
moto = {extras = ["s3"], version = "^5.0.11"}
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
