[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["Toshihisa Okaneya <t.okaneya@bloomingk2.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
boto3 = "^1.34.148"


[tool.poetry.group.dev.dependencies]
moto = {extras = ["s3"], version = "^5.0.11"}
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# ruff(linter/formatter)の有効ルール。"ALL"は警告が増えすぎたので断念。
# ルール一覧: https://docs.astral.sh/ruff/rules/
lint.select = ["E", "F", "I", "N", "UP", "W"]

# linter対象から除外するディレクトリ。高速化のために指定
exclude=[
    ".git",
    ".github",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pycache__",
]
